fix: about page text align

--- a/app/about/styles.module.scss
+++ b/app/about/styles.module.scss
@@ -2,7 +2,7 @@
   margin-bottom: 1rem;
   text-indent: 2rem;
   text-align: justify;
-  @include xs() {
+  @include sm() {
     text-align: left;
   }
 }
